--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
-<%@ Page Language="C#" %>
+<%@ Page Language="C#" AutoEventWireup="true"  CodeFile="Default.aspx.cs" Inherits="_Default" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<script runat="server">
-
-    protected void Button1_Click(object sender, EventArgs e)
-    {
-        Label1.Text = "Second try";
-    }
-</script>
 
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head runat="server">
@@ -18,6 +10,7 @@
     <form id="form1" runat="server">
     <div>
         <asp:Label ID="Label1" runat="server" Text="Label"></asp:Label>
+        <br />
         <asp:Button ID="Button1" runat="server" OnClick="Button1_Click" Text="Button" /></div>
     </form>
 </body>
